--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>Vaccine Availability Tracker</title>
     <link rel="stylesheet" media="all" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    <script src="papaparse.min.js"></script>
+    <script src="../vaccinetracker.github.io/js/papaparse.min.js"></script>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <style>
 table {
