--- a/index.html
+++ b/index.html
@@ -3,92 +3,12 @@
 
 <head>
     <title>Vaccine Availability Tracker</title>
+    
     <link rel="stylesheet" media="all" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <link rel="stylesheet" href="style.css">
     <script src="../vaccinetracker.github.io/js/papaparse.min.js"></script>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <style>
-table {
-  font-family: arial, sans-serif;
-  border-collapse: collapse;
-  width: 100%;
-}
- th {
-  width: 8px;
-  position: -webkit-sticky;
-  position: sticky;
-  top: 0;
-  z-index: 2;
-  border: 1px solid ;
-  background-color: #5f83f5;
-  color:white;
-  padding: 8px;
-}
-
-td {
-  border: 2px solid #dddddd;
-  text-align: left;
-  padding: 8px;
-}
-
-tr:nth-child(even) {
-  background-color: white;
-}
-tr:nth-child(odd) {
-  background-color: #a3cbf0;
-}
-</style><style>
-input[type=text], select {
-  width: 20%;
-  padding: 12px 20px;
-  margin: 8px 0;
-  display: inline-block;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  box-sizing: border-box;
-}
-
-input[type=submit] {
-  width: 10%;
-  background-color: #4CAF50;
-  color: white;
-  padding: 14px 20px;
-  margin: 8px 0;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-}
-
-
-#myInput {
-  position: -webkit-sticky;
-  position: sticky;
-  z-index: 2;
-  box-sizing: border-box;
-  width: 40%;
-  background-position: 14px 12px;
-  background-repeat: no-repeat;
-  font-size: 16px;
-  padding: 14px 20px 12px 45px;
-  border: none;
-  border-bottom: 1px solid #ddd;
-}
-button {
-  width: 10%;
-  background-color: #4CAF50;
-  color: white;
-  padding: 6px 20px;
-  margin: 8px 0;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  height: 50px;
-}
-
-input[type=submit]:hover {
-  background-color: #45a049;
-}
-
-</style>
+ 
 <script type="text/javascript">
   var csvdata;
   var a;
