Location page added

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     
     <link rel="stylesheet" media="all" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB41DRUbKWJHPxaFjMAwdrzWzbVKartNGg&callback=initMap&libraries=&v=weekly" async></script>   
     <script src="js/papaparse.min.js"></script>
     <script src="js/VaccineAvailability.js"></script>
     
@@ -67,7 +68,10 @@
   <div class="col-sm-10" style="margin:20px 0px 20px 0px;">
   </div>
 </div>
-
+<!-- <script
+          src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB41DRUbKWJHPxaFjMAwdrzWzbVKartNGg&callback=initMap&libraries=&v=weekly"
+          async
+        ></script> -->
 
 </body>
 
