--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head>
-    <title>Vaccine Tracker</title>
+    <title>Vaccine Availability Tracker</title>
     
     <link rel="stylesheet" media="all" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
@@ -43,7 +43,7 @@
 <body style="background-color:rgb(127, 175, 214);">
 <center>
     <div id ="form"><br>
-      <h1><b>Vaccine Availability Tracker</b></h1>
+      <h1><b>Vaccine Tracker</b></h1>
       <br>
         <form name="vaccineForm" action="#vaccine_slot" method="GET">
              <select id="mySelect" onchange="showcities()", aria-placeholder="State">
