--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCbtyb7TR2Wbhzgs4KAtqBP_hppkQgDESQ&callback=initMap&libraries=&v=weekly" async></script>   
     <script src="js/papaparse.min.js"></script>
     <script src="js/VaccineAvailability.js"></script>
-    
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
  
 <script type="text/javascript">
