--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>Vaccine Availability Tracker</title>
     
-    <link rel="stylesheet" media="all" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCbtyb7TR2Wbhzgs4KAtqBP_hppkQgDESQ&callback=initMap&libraries=&v=weekly" async></script>   
     <script src="js/papaparse.min.js"></script>
@@ -54,7 +54,7 @@
               <option value=""disabled selected>Select City</option>
             </select>  
           <br>
-            <button onclick="abc()">Check Availability</button>
+            <button class="btn btn-success" onclick="abc()">Check Availability</button>
         </form>    
     </div>
  </center>
