--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </form>    
     </div>
  </center>
- <div id="vaccine_slot" class="table-responsive-sm">
+ <div id="vaccine_slot" class="table-responsive-sm -w auto">
 </div>
 <div id="vaccinated">
   <div class="col-sm-10" style="margin:20px 0px 20px 0px;">
