--- a/index.html
+++ b/index.html
@@ -60,10 +60,11 @@
  </center>
 
  
- <div id="vaccine_slot" class="table-responsive-sm -w auto">
-</div>
-<div id="vaccinated">
-  <div class="col-sm-10" style="margin:20px 0px 20px 0px;">
+
+<div id="vaccinated" >
+  <div id="vaccine_slot" class="table-responsive-sm -w auto">
+  </div>
+  <div class="col-sm-10" id='footer' style="margin:20px 0px 20px 0px;">
   </div>
 </div>
 </body>
