--- a/index.html
+++ b/index.html
@@ -61,8 +61,11 @@
 
  
 
+
+
+ <center>
 <div id="vaccinated" >
-</div>
+</div></center>
   <div id="vaccine_slot" class="table-responsive-sm -w auto">
   </div>
   <div class="col-sm-10" id='footer' style="margin:20px 0px 20px 0px;">
